// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InboxScreen Default 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          desabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InboxScreen Error 1`] = `
<div
  className="page lists-show"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-face-sad"
    />
    <div
      className="title-message"
    >
      Oh no!
    </div>
    <div
      className="subtitle-message"
    >
      Something went wrong
    </div>
  </div>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item"
>
  <input
    readOnly={true}
    type="text"
    value="Test Task"
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item"
>
  <input
    readOnly={true}
    type="text"
    value="Test Task"
  />
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item"
>
  <input
    readOnly={true}
    type="text"
    value="Test Task"
  />
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task1"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task2"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task3"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task4"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task5"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-item"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task1"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task2"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task3"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task4"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task5"
      />
    </div>
    <div
      className="list-item"
    >
      <input
        readOnly={true}
        type="text"
        value="Task 6 (pinned)"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots img With An Image 1`] = `
<img
  alt="my image"
  src="image.png"
/>
`;
